# slint_test

./: .gitignore  Cargo.toml  flake.nix  justfile  rust-toolchain.toml
android/: build.gradle.kts
gradle/: libs.versions.toml
src/: lib.rs  main.rs
ui/: icons.slint  main_window.slint  virtual_keyboard.slint
